<resources>
    <string name="app_name">PetaniCM</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="prompt_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_save">Save your information</string>
    <string name="number">Input your phone number</string>
    <string name="name">Input your full name</string>
    <string name="title_joinus">Join Us</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_order">Order</string>
    <string name="action_exit">Exit</string>
    <string name="inputhere">Input Here...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="buletin">•</string>


    <!-- JoinText -->
    <string name="join1">Saat ini kami membuka pendaftaran bagi siapa saja yang mimiliki ketertarikan untuk mengubah kebiasaan bermain game anda menjadi sesuatu yang menghasilkan untuk anda.</string>
    <string name="join2">Berikut adalah keuntungan dibawah bendera komunitas PetaniCM:</string>
    <string name="join3">• Jika anda belum berpengalaman dalam farming, anda akan diberikan pelatihan online khusus melalui Discord oleh farmer-expert.</string>
    <string name="join4">• Anda akan mendapat proteksi dibawah komunitas PetaniCM.</string>
    <string name="join5">• Tidak ada target penghasilan, selama anda dapat menyelesaikan pesanan pemesan yang sudah anda ambil</string>
    <string name="join6">• TIDAK ADA FEE dalam setiap pemesanan</string>
    <string name="join7">• Farmer terhubung langsung dengan pembeli.</string>

    <string name="join8">Berikut adalah kriteria yang kami cari:</string>
    <string name="join9">• Jujur dan dapat berkerja sama</string>
    <string name="join10">• Lihat poin diatas</string>
    <string name="join11">• Lihat poin diatas</string>
    <string name="join12">• Lihat poin diatas</string>
    <string name="join13">• Lihat poin diatas</string>

    <!-- AboutText -->
    <string name="about1">PetaniCM adalah sekelompok "Farmer" terampil game online yang telah berkumpul bersama di bawah satu bendera dan membentuk suatu komunitas terorganisir yang berbasis di Bandung bernama, PetaniCM.  Setiap dari kami memiliki kemampuan dan pemahaman yang luas tantang dunia game farming MMORPG, terutama untuk game RF Online. Karena dari sanalah kami terbentuk dan mempunyai basis cukup kuat di RF Online sampai sekarang.</string>
    <string name="about2">Saat ini kami member aktif mencapai 30 orang dan rata - rata member kami memiliki "jam terbang" yang tinggi saat farming. Akan tetapi kami kerap mengalami kehabisan stok pelayanan kami. Maka dari itu, jika anda memiliki ketertarikan mengubah kebiasaan bermain gameanda menjadi sesuatu yang menghasilkan, come and join with us!</string>
    <string name="about3">Anton Saputro</string>
    <string name="about4">antonsap@gmail.com</string>
    <string name="about5">+628139428XXXX </string>

    <!-- OrderText -->
    <string name="order1">Untuk saat ini kami hanya melakukan pembayaran melalui PayPal, BitCoin , atau malului transfer bank maupun ATM.</string>
    <string name="order2">PetaniCM akan mengembalikan 100% uang pemesanan ke pemesan jika petani kami tidak menyelesaikan pesanan (2 hari atau 2 × 24 jam, termasuk hari libur) setelah tanggal deadline yang disepakati antara pemesan dan petani.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
