<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ccdp.pcmapp4.fragment.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="127dp"
                android:src="@drawable/pcm"
                android:layout_gravity="center"/>

            <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Siapa Kami?"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <ImageView
                android:layout_width="402dp"
                android:layout_height="250dp"
                android:src="@drawable/pcm2"
                android:layout_gravity="center"
                android:layout_weight="0.14" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about2" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="✆Hubungi Kami"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about5" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
