<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ccdp.pcmapp4.fragment.JoinFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Farm And Play With Us!"
                android:textSize="25sp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Keuntungan"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join2" />
            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_html0"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Persyaratan"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join8" />

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_html1"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/btnjoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="join us"
                android:background="@color/colorAccent"
                android:textColor="@color/colorGold"
                android:textSize="15sp"
                android:textStyle="bold"
                android:elevation="0dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
